# notakase

./: Cargo.toml  README.md
.claude/: settings.local.json
crates/notakase-cli/: Cargo.toml
crates/notakase-cli/src/: main.rs  session.rs
crates/notakase-core/: Cargo.toml
crates/notakase-core/examples/: open_check.rs  recover.rs
crates/notakase-core/src/: config.rs  cryptobox.rs  doc.rs  folder_sync.rs  keystore.rs  lib.rs  manifest.rs  server_client.rs  server_sync.rs  sharelink.rs  store.rs  sync.rs  todokase.rs  util.rs  vaultkey.rs
crates/notakase-mcp/: Cargo.toml
crates/notakase-mcp/src/: main.rs  session.rs  tools.rs
crates/notakase-tui/: Cargo.toml
crates/notakase-tui/src/: app.rs  main.rs  markdown.rs  theme.rs  tree.rs  ui.rs  watch.rs
notes/: README.md  inbox.md
notes/Journal/: 2026-07-10.md  2026-07-13.md
notes/Projects/client/2026/q3/research/sources/: paper-notes.md
notes/Projects/notakase/: roadmap.md  spec.md  tasks.md
notes/Projects/todarchy/: release-notes.md
notes/Recipes/: sourdough.md
notes/Reference/: keybindings.md  markdown-showcase.md
