[package]
name = "notakase-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Keyboard-first, terminal-native notes browser for Omarchy"

[[bin]]
name = "notakase"
path = "src/main.rs"

[dependencies]
notakase-core = { path = "../notakase-core" }
anyhow.workspace = true
# unstable-rendered-line-info gives Paragraph::line_count for exact scroll math.
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
# markdown parsing for the preview pane.
pulldown-cmark = { version = "0.12", default-features = false }
# Pinned to the crossterm version ratatui 0.29 re-exports so the backend and
# our terminal setup share one crate instance.
crossterm = "0.28"
# watch the sync folder for live updates (flips a flag; the loop does the sync).
notify = "6"
# local date/time for new-note templates.
chrono = { version = "0.4", features = ["clock"] }
# a current-thread runtime to drive the async relay client from the sync UI loop.
tokio = { version = "1", features = ["rt", "net", "time"] }
